example/secondfile/objects/RDS_Mutlicast_V4__c.object
<CustomObject>
    <description>Premise Details-Premise Data-Circuit and VLAN Details- VPN Data-Multicast V4</description>
    <fields>
        <fullName>C_Group_Address_Mask__c</fullName>
        <description>Premise Details-Premise Data- Circuit and VLAN Details-VPN Data-Mutlicast V4-C Group IP Address- C Group Address Mask</description>
        <label>C Group Address Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Group_IP_Address__c</fullName>
        <description>Premise Details-Premise Data- Circuit and VLAN Details-VPN Data-Mutlicast V4-C Group IP Address</description>
        <label>C Group IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Type__c</fullName>
        <description>This is a technical field to indicate that record has been created due to MACD Disconnect. Not required on page layout.</description>
        <label>MACD Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pimssm_Address_Mask__c</fullName>
        <description>Premise Details-Premise Data- Circuit and VLAN Details-VPN Data-Mutlicast V4-Pimssm IP Details-Pimssm Address Mask</description>
        <label>Pimssm Address Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pimssm_IP_Address__c</fullName>
        <description>Premise Details-Premise Data- Circuit and VLAN Details-VPN Data-Mutlicast V4-Pimssm IP Details-Pimssm IP Address</description>
        <label>Pimssm IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_VPN_Data_V4__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Premise Details-Premise Data- Circuit and VLAN Details-VPN Data-Mutlicast V4</description>
        <label>RDS-VPN Data V4</label>
        <referenceTo>RDS_VPN_Data__c</referenceTo>
        <relationshipLabel>RDS-Multicast V4</relationshipLabel>
        <relationshipName>RDS_Multicast_V4</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Static_IP_Address__c</fullName>
        <description>Premise Details-Premise Data- Circuit and VLAN Details-VPN Data-Mutlicast V4-Static RP IP Address</description>
        <label>Static IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Static_RP_Override_Indicator__c</fullName>
        <description>Premise Details-Premise Data- Circuit and VLAN Details-VPN Data-Mutlicast V4-Static Randezvous Point-Static RP Override Indicator</description>
        <label>Static RP Override Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Pimssm_Default_IP_Indicator__c</fullName>
        <description>Premise Details-Premise Data- Circuit and VLAN Details-VPN Data-Mutlicast V4-Pimssm Data-Use Pimssm Default IP Indicator</description>
        <label>Use Pimssm Default IP Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RDS-Mutlicast V4</label>
    <nameField>
        <displayFormat>MV4-{00000}</displayFormat>
        <label>Mutlicast V4 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDS-Multicast V4</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EDS_Edit_Expired</fullName>
        <active>true</active>
        <description>EDS Edit Expired</description>
        <errorConditionFormula>AND(OR(if(RDS_VPN_Data_V4__r.Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.Edit_Expired_Date__c &lt;NOW(),True,False),ISPICKVAL( RDS_VPN_Data_V4__r.Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.RDS_object_status__c ,&quot;Review completed&quot;)),
		$Profile.Name &lt;&gt;&quot;SI_API User&quot;,
		$Profile.Name &lt;&gt;&quot;System Administrator&quot;,
$Profile.Name &lt;&gt;&quot;SI_EBM_DEV_OPS&quot;, $Profile.Name &lt;&gt;&quot;SI_EBM Admin&quot;)</errorConditionFormula>
        <errorMessage>Edit Time has elapsed . Please contact EBM Admin .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lookup_to_VPN4_cannot_be_updated</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( RDS_VPN_Data_V4__c )</errorConditionFormula>
        <errorMessage>The reference to VPN Data V4 cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Creation_for_Non_MACD_D_V4Multi</fullName>
        <active>true</active>
        <description>This validation rule will prevent creation of records for SI EBM Admin and EBM DEV OPs profile when the record is not of MACD Disconnect type</description>
        <errorConditionFormula>AND(MACD_Type__c &lt;&gt; &apos;D&apos;, MACD_Type__c &lt;&gt; &apos;C&apos;, 
OR($Profile.Name = &apos;SI_EBM_DEV_OPS&apos;,$Profile.Name = &apos;SI_EBM Admin&apos;), 
ISNEW() )</errorConditionFormula>
        <errorMessage>You do not have permission to create a new RDS-Mutlicast V4 record.</errorMessage>
    </validationRules>
</CustomObject>